# TCPFileShare

./: .clangd  CMakeLists.txt  README.md
src/Client/: SenderBuffer.hpp  client.cpp
src/Server/: server.cpp
